# trait-rpc

./: Cargo.toml
.github/workflows/: rust.yml
examples/: blocking_client.rs  nested_client.rs  nested_server.rs  resources_server.rs  todo_client.rs  todo_server.rs  websocket_client.rs
examples/todo_lib/: mod.rs
examples/traits/: nested.rs  resources.rs  todo.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros_impl/: Cargo.toml
macros_impl/src/: lib.rs  output.rs  parse.rs
macros_impl/src/output/: client.rs  request.rs  response.rs  server.rs  trait_decl.rs
macros_impl/src/tests/: mod.rs
macros_impl/src/tests/inputs/: nested.rs  public.rs  resource.rs  simple.rs
macros_impl/src/tests/outputs/: nested.rs  resource.rs  simple.rs
macros_impl/src/tests/outputs_client/: simple.rs
macros_impl/src/tests/outputs_server/: public.rs  simple.rs
src/: browser.rs  client.rs  format.rs  lib.rs  reqwest.rs  server.rs
src/client/: browser.rs  reqwest.rs  reqwest_blocking.rs  tokio_websocket.rs  wasm_websocket.rs  websocket.rs
src/format/: browser_json.rs  cbor.rs  json.rs
src/server/: axum.rs
