[workspace]
members = ["macros", "macros_impl"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "trait-rpc"
version.workspace = true
edition.workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[features]
axum = ["dep:axum", "dep:tower", "axum/ws"]
browser = ["dep:web-sys", "dep:wasm-bindgen-futures"]
reqwest-blocking = ["dep:reqwest", "reqwest/blocking"]
reqwest = ["dep:reqwest"]
websocket-client = ["dep:tokio-tungstenite", "dep:tokio", "dep:web-sys", "dep:wasm-bindgen-futures", "dep:ws_stream_wasm"]
json = ["dep:serde_json"]
browser-json = ["dep:serde-wasm-bindgen", "dep:web-sys", "dep:wasm-bindgen-futures"]
cbor = ["dep:ciborium"]
__examples_tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"], optional = true }
thiserror = "2.0.17"
axum = { version = "0.8.7", optional = true, features = ["macros"]}
tower = { version = "0.5.2", optional = true }
macros = { package = "trait-rpc-macros", path = "macros" }
futures = "0.3.31"
bon = "3.8.1"
tracing = "0.1.44"

# Formats
serde_json = { version = "1.0.145", optional = true }
ciborium = { version = "0.2.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7.5", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
optional = true
features = ["Window", "Request", "Response", "RequestInit", "RequestMode", "ReadableStream", "Headers"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.28.0", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[[example]]
name = "todo_client"
required-features = ["reqwest", "__examples_tokio"]

[[example]]
name = "websocket_client"
required-features = ["reqwest", "__examples_tokio", "websocket-client"]

[[example]]
name = "blocking_client"
required-features = ["reqwest-blocking"]

[[example]]
name = "nested_client"
required-features = ["reqwest", "__examples_tokio"]

[[example]]
name = "wasm_client"
required-features = ["browser", "browser-json"]

[[example]]
name = "todo_server"
required-features = ["axum"]

[[example]]
name = "nested_server"
required-features = ["axum"]

[[example]]
name = "resources_server"
required-features = ["axum"]