[package]
name = "macros_impl"
version.workspace = true
edition.workspace = true

[features]
client = []

[dependencies]
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["parsing"] }
quote = "1.0.42"
convert_case = "0.10.0"

[dev-dependencies]
prettyplease = "0.2.37"
difference = "2.0.0"